Fix overflow issues on mobile. Issue was width properties set too large.

--- a/coe-portfolio/src/App/app.css
+++ b/coe-portfolio/src/App/app.css
@@ -1,3 +1,4 @@
+html,
 body{
     background: rgb(33, 33, 33);
     background: linear-gradient(
@@ -9,8 +10,9 @@ body{
     color: #151316;
     height: 100vh;
     margin: 0;
-    overflow-x: hidden;
+    padding: 0;
     position: relative;
+    width: auto;
 }
 
 body::-webkit-scrollbar{
@@ -26,3 +28,5 @@ body::-webkit-scrollbar-track {
     border-radius: 8px;       /* roundness of the scroll thumb */
     border: 3px solid black;  /* creates padding around scroll thumb */
   }
+
+
